--- a/frontend/groupomania/src/app/admin-login-page/admin-login-page.component.html
+++ b/frontend/groupomania/src/app/admin-login-page/admin-login-page.component.html
@@ -4,28 +4,21 @@
             <img src="../../assets/icon.webp" alt="Icone de Groupomania" class="container__image" />
         </div>
         <div class="container__text">
-            <h2 class="container__heading2">Connectez-vous sur Groupomania</h2>
+            <h2 class="container__heading2">Connexion d'administrateur</h2>
         </div>
 
-        <form class="container__form" [formGroup]="loginForm">
+        <form class="container__form" [formGroup]="loginModForm">
             <fieldset class="container__fieldset fieldset">
                 <legend class="fieldset__legend">Veuillez compléter ces champs:</legend>
                 <input type="text" class="container__input" placeholder="Email" required formControlName="user_email" title="Champ de saisie d'email" (change)="restoreInput()" autocomplete="email" />
 
                 <input type="password" class="container__input password__input" placeholder="Mot de passe" required id="password" formControlName="user_password" title="Champ de saisie de mot de passe" (change)="restoreInput()" autocomplete="current-password" />
-                <button type="submit" class="container__button" (click)="onSubmitLoginForm()" [disabled]="loginForm.invalid" [ngClass]="{ 'container__button--disabled': loginForm.invalid }">
+                <button type="submit" class="container__button" (click)="onSubmitLoginForm()" [disabled]="loginModForm.invalid" [ngClass]="{ 'container__button--disabled': loginModForm.invalid }">
                     Se connecter
                 </button>
             </fieldset>
         </form>
-
-        <div class="not-signed-up-container">
-            <a class="container__not-signed-up" routerLink="">
-                Voulez-vous vous inscrire?
-            </a>
-        </div>
-
-        <div class="error-form" *ngIf="isUserAlreadyLoggedIn">
+        <div class="error-form" *ngIf="formIsIncorrect">
             <i class="fas fa-times-circle error-form__icon"></i>
             <p class="error-form__text">
                 {{ errorMessage }}
