--- a/frontend/groupomania/src/app/published-posts/published-posts.component.html
+++ b/frontend/groupomania/src/app/published-posts/published-posts.component.html
@@ -8,9 +8,9 @@
                 {{ postAmountOfLikes }} {{ hasPostOneLikeOrManyLikes }}
             </p>
 
-            <div class="dialog__parent" *ngIf="postUserId === userId">
-                <input type="button" value="Modifier" class="post__modify" (click)="modifyPost()" routerLink="/posts" fragment="postFormCard" />
-                <button title="Modifier le titre, description ou image" class="post__modify--mobile" (click)="modifyPost()" routerLink="/posts" fragment="postFormCard">
+            <div class="dialog__parent" *ngIf="postUserId === userId ">
+                <input type="button" value="Modifier" class="post__modify" (click)="modifyPost()" routerLink="/posts" fragment="postFormCard" *ngIf="postUserId === userId" />
+                <button title="Modifier le titre, description ou image" class="post__modify--mobile" (click)="modifyPost()" routerLink="/posts" fragment="postFormCard" *ngIf="postUserId === userId">
                     <i class="fas fa-edit"></i>
                 </button>
                 <button title="Supprimer le post" class="post__delete--mobile" (click)="deletePost()">
