--- a/frontend/groupomania/src/app/published-posts/published-posts.component.html
+++ b/frontend/groupomania/src/app/published-posts/published-posts.component.html
@@ -8,9 +8,9 @@
                 {{ postAmountOfLikes }} {{ hasPostOneLikeOrManyLikes }}
             </p>
 
-            <div class="dialog__parent" *ngIf="postUserId === userId ">
-                <input type="button" value="Modifier" class="post__modify" (click)="modifyPost()" routerLink="/posts" fragment="postFormCard" *ngIf="postUserId === userId" />
-                <button title="Modifier le titre, description ou image" class="post__modify--mobile" (click)="modifyPost()" routerLink="/posts" fragment="postFormCard" *ngIf="postUserId === userId">
+            <div class="dialog__parent" *ngIf="displayButton">
+                <input type="button" value="Modifier" class="post__modify" (click)="modifyPost()" routerLink="/posts" fragment="postFormCard" />
+                <button title="Modifier le titre, description ou image" class="post__modify--mobile" (click)="modifyPost()" routerLink="/posts" fragment="postFormCard">
                     <i class="fas fa-edit"></i>
                 </button>
                 <button title="Supprimer le post" class="post__delete--mobile" (click)="deletePost()">
@@ -38,7 +38,7 @@
     <div class="container__interactions-row">
         <p class="interactions-row__like" (click)="sendLikeToPost(postPostId, userId)" [ngClass]="{
         'interactions-row__like--active':
-          likedOrUnlikedMessage === 'The post has been liked (+1)'
+         hasUserLiked
       }">
             Like <i class="far fa-thumbs-up"></i>
         </p>
